# Brommando

./: README.md  pyproject.toml
brommando/assets/images/pixelArtConcepts/: 1webp
brommando/src/: main.py  settings.py
brommando/src/entities/: player.py
docs/: README_Example.md  assets_management.md  designPattern.md  movement.md  shoot_move.md
src/: asset_manager.py
